-===============================================================================
Change history for translation-utility
================================================================================

DONE:
8/27/08 - manually update and publish website files for 1.00.00 release
********* version 1.00.00 (23942)
8/27/08 - add missing jnlp.jar to proguard in buildfile, needed to open web browser by UpdateManager
8/27/08 - add hack to read common string files when project.name=common-strings
8/21/08 - inspect project.properties in JAR file to retrieve project.name; fallback to discovery algorithm
********* version 0.02.01 (23665)
8/12/08 - exclude the source language (English) from the choices for destination language
8/12/08 - look for English strings in project-strings_en.properties, then fallback to project-strings.properties if not found
8/12/08 - move constants to TUConstants
6/25/08 - change URL for translation utility homepage to reflect new website organization
6/25/08 - catch FileNotFoundException when looking for translation-utility.properties on server
6/16/08 - discover project name from jar files named curve-fit.jar or curve-fit_fr.jar
6/16/08 - wrap main in SwingUtility.invokeLater
6/16/08 - remove HTML file generation for Flash, handled dynamically by FlashLauncher
6/16/08 - cleanup JavaSimulation and FlashSimulation
6/16/08 - move common.projects and language properties to their own properties files, since project properties file may lose its formatting
6/16/08 - add HTML file to jar for FlashLauncher, so that "test" feature works
6/16/08 - add support for Flash sims (test isn't working yet, missing HTML file)
6/16/08 - add factory for creating proper type of Simulation
6/16/08 - rename UpdateManager
6/16/08 - refactor to create Simulation type hierarchy
6/16/08 - delete dead code for using Google Translate to provide an automatic translation
6/13/08 - PropertiesFlashAdapter, for converting to/from Properties and format required by Flash sims (XML)