@@ -25,18 +25,6 @@ label.find=Find:
 label.selectALanguage=Select a language
 label.custom=CUSTOM
 
-error.noSuchJar=JAR file does not exist
-error.languageCodeFormat=\
-<html>\
-Language code must in ISO 639-1 format.<br>\
-Press the Help button for more details.\
-</html>
-error.notCustomLanguageCode=\
-<html>\
-{0} is not a custom language code.<br>\
-It is the code for {1}.\
-</html>
-
 menu.file=File
 menu.file.mnemonic=F
 menu.item.exit=Exit
